# websocket-stt-bench

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  docker-compose.remote-inference.yml  docker-compose.yml  justfile  versions.lock.toml
.claude/skills/add-runtime/: SKILL.md
.github/workflows/: chart.yml  images.yml
analysis/: pyproject.toml
analysis/stt_analysis/: __init__.py  __main__.py  comparison_chart_gen.py
analysis/tests/: test_analyzer.py
charts/stt-bench/: Chart.yaml  README.md  values-edge-runs.yaml  values-homelab-example.yaml  values.yaml
charts/stt-bench/templates/: _helpers.tpl  gateways.yaml  inferbench-jobs.yaml  inference-ingress.yaml  inference.yaml  loadgen-jobs.yaml  results-pvc.yaml
docker/: cpp23-uwebsockets.Dockerfile  elixir-phoenix.Dockerfile  go-nethttp.Dockerfile  inference-server.Dockerfile  java-helidon-nima.Dockerfile  loadgen-rust.Dockerfile  ocaml-oxcaml-base.Dockerfile  ocaml-oxcaml-epoll.Dockerfile  ocaml-oxcaml.Dockerfile  ocaml-websocket-async.Dockerfile  python-fastapi.Dockerfile  python-launch.sh  rust-axum.Dockerfile  rust-sync.Dockerfile  scala-pekko.Dockerfile  typescript-bun.Dockerfile
docs/: OXCAML_EPOLL_PERF_PLAN.md  RUNTIME_PLAYBOOK.md  oxcaml-bottleneck-plan.md
loadgen/rust/: Cargo.toml
loadgen/rust/src/: inferbench.rs  lib.rs  main.rs  protocol.rs
scripts/: check-docker-tags.sh  common.sh  doctor.sh  ensure-bazelisk.sh  ensure-bun.sh  ensure-go.sh  ensure-jdk.sh  ensure-maven.sh  ensure-opam.sh  ensure-oxcaml-switch.sh  ensure-sbt.sh  ensure-stock-ocaml-switch.sh  ensure-uv.sh  py-sync.sh  run-diagnostic-sweep.sh  sample-docker-stats.py
scripts/bench/: eval_slo.py  ladder.sh  oxcaml_epoll_deploy.sh  oxcaml_epoll_k3s_point.sh  oxcaml_epoll_onechange.sh  oxcaml_epoll_preflight.sh  oxcaml_local_diag.sh  oxcaml_onechange.sh  run_point.sh  test_oxcaml_epoll_deploy.sh  test_oxcaml_epoll_k3s_point.sh  test_oxcaml_epoll_preflight.sh  test_oxcaml_epoll_source_guards.sh  test_oxcaml_onechange_metadata.sh
services/cpp23-uwebsockets/: .bazelrc  .clang-format  .clang-tidy  BENCHMARK.md  BUILD.bazel  MODULE.bazel
services/cpp23-uwebsockets/src/: config.cpp  config.hpp  inference.cpp  inference.hpp  main.cpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp  session.cpp  session.hpp
services/cpp23-uwebsockets/tests/: config_test.cpp  inference_test.cpp  protocol_test.cpp  session_test.cpp  test_support.hpp
services/elixir-phoenix/: .credo.exs  .formatter.exs  BENCHMARK.md  mix.exs
services/elixir-phoenix/config/: config.exs  runtime.exs
services/elixir-phoenix/lib/stt_gateway/: application.ex  inference.ex  runtime_versions.ex
services/elixir-phoenix/lib/stt_gateway_web/: endpoint.ex  router.ex  stt_web_socket.ex  web_socket_plug.ex
services/elixir-phoenix/test/: runtime_versions_test.exs
services/go-nethttp/: BENCHMARK.md  go.mod  go.sum
services/go-nethttp/cmd/stt-go-nethttp/: main.go
services/go-nethttp/internal/config/: config.go  config_test.go
services/go-nethttp/internal/inference/: inference.go  inference_test.go
services/go-nethttp/internal/protocol/: protocol.go  protocol_test.go  test_helpers_test.go
services/go-nethttp/internal/server/: server.go  server_test.go
services/go-nethttp/internal/session/: session.go  session_test.go
services/inference-server/: Cargo.toml
services/inference-server/src/: main.rs
services/java-helidon-nima/: BENCHMARK.md  pom.xml
services/ocaml-oxcaml/: BENCHMARK.md  dune-project  stt_ocaml_oxcaml.opam
services/ocaml-oxcaml-epoll/: BENCHMARK.md  dune-project  stt_ocaml_oxcaml_epoll.opam
services/ocaml-oxcaml-epoll/lib/: base64.ml  dune  handshake.ml  http_request.ml  http_response.ml  int_stack.ml  mask.ml  protocol.ml  sha1.ml  timer_heap.ml  ws.ml
services/ocaml-oxcaml-epoll/linux/: config.ml  dune  epoll.ml  epoll_stubs.c  server.ml
services/ocaml-oxcaml-epoll/test/: dune  test_linux_server.ml  test_stt_ocaml_oxcaml_epoll.ml
services/ocaml-oxcaml/lib/: base64.ml  base64.mli  config.ml  config.mli  diagnostics.ml  diagnostics.mli  dune  http1.ml  http1.mli  inference.ml  inference.mli  inflight_capability.ml  inflight_capability.mli  protocol.ml  protocol.mli  runtime.ml  runtime.mli  server.ml  server.mli  session.ml  session.mli  sha1.mli  websocket_connection.ml  websocket_connection.mli  websocket_frame.ml  websocket_frame.mli  websocket_handshake.ml  websocket_handshake.mli
services/ocaml-oxcaml/test/: dune  test_stt_ocaml_oxcaml.ml
services/ocaml-websocket-async/: BENCHMARK.md  dune-project
services/ocaml-websocket-async/lib/: config.mli  dune  http1.ml  http1.mli  inference.ml  inference.mli  runtime.ml  runtime.mli  server.ml  server.mli  session.ml  session.mli  sha1.ml  sha1.mli  websocket_connection.ml  websocket_connection.mli  websocket_frame.ml  websocket_frame.mli  websocket_handshake.ml  websocket_handshake.mli
services/ocaml-websocket-async/test/: dune  test_stt_ocaml_websocket_async.ml
services/python-fastapi/: BENCHMARK.md  pyproject.toml
services/python-fastapi/app/: __init__.py  config.py  dependencies.py  inference.py  main.py  protocol.py  runtime.py  session.py  stub.py
services/python-fastapi/tests/: alt_impls.py  bench_stub.py  bench_threading.py  golden.py  test_dependencies.py  test_stub_parity.py
services/rust-axum/: BENCHMARK.md  Cargo.toml
services/rust-axum/src/: config.rs  inference.rs  main.rs  protocol.rs  session.rs  state.rs
services/rust-sync/: BENCHMARK.md  Cargo.toml
services/rust-sync/src/: config.rs  http.rs  inference.rs  main.rs  protocol.rs  session.rs
services/scala-pekko/: .scalafix.conf  .scalafmt.conf  BENCHMARK.md  build.sbt
services/scala-pekko/project/: plugins.sbt
services/scala-pekko/src/main/resources/: logback.xml  (+1 more)
services/typescript-bun/: BENCHMARK.md  biome.json  oxlint.json  package.json  tsconfig.json
services/typescript-bun/src/: config.ts  index.ts  inference.ts  protocol.ts  server.ts  session.ts
services/typescript-bun/tests/: config.test.ts  inference.test.ts  protocol.test.ts  session.test.ts
(+35 files in other folders)
