[project]
name = "stt-analysis"
version = "0.1.0"
description = "Raw sample analyzer for websocket-stt-bench results"
requires-python = "==3.14.4"
dependencies = [
    "numpy==2.4.4",
    "scipy==1.17.1",
    "matplotlib==3.10.8",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "ruff==0.15.12",
    "ty==0.0.31",
]

[tool.uv]
required-version = "==0.11.7"
python-preference = "only-system"
python-downloads = "never"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM", "RUF", "C4", "PIE", "RET", "FA"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.environment]
python = "./.venv"
