(lang dune 3.21)
(name stt_ocaml_oxcaml)

(generate_opam_files true)

(formatting
 (enabled_for ocaml))

(package
 (name stt_ocaml_oxcaml)
 (synopsis "OxCaml-based STT WebSocket gateway")
 (description
  "A speech-to-text WebSocket gateway implementing the websocket-stt-bench protocol on Jane Street's OxCaml 5.2.0+ox compiler. The one-inflight-per-connection invariant is modeled as an opaque mint-once Inflight_capability type and enforced at runtime by an Async Mvar. Built on Async with a hand-rolled RFC 6455 framer (the websocket-async/cohttp-async stack pulls in digestif, which does not build on the OxCaml switch invariant). janestreet/parallel multi-vCPU scaling is future work.")
 (depends
  (ocaml (= 5.2.0+ox))
  dune
  base
  core
  core_unix
  async
  chrome-trace
  yojson
  ppx_jane
  alcotest))
